--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    gap: 4px;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+button {
+    padding: 8px 16px;
+    font-size: 16px;
+    border: 0;
+    border-radius: 6px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+button:active {
+    cursor: grabbing;
+    background-color: rgb(204, 204, 204);
+}
